syntax = "proto3";

option go_package = "user/authentication";
import "google/api/annotations.proto";

// Services.
service Authentication {
  // Register.
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/signup"      
    };
  } 
  
  // Authenticate.             
  rpc SignIn (SignInRequest) returns (SignInResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/signin"
    };
  }                      

  // Logout.
  rpc LogOut (LogOutRequest) returns (LogOutResponse) {
    option (google.api.http) = {
      get: "/api/v1/user/logout"
    };
  }
}

// SignUp.
message SignUpRequest {
  string name = 1;
}
message SignUpResponse {
  string name = 1;
}

// SignIn.
message SignInRequest {
}
message SignInResponse {
}

// LogOut.
message LogOutRequest {
}
message LogOutResponse {
}

// User.
message User {
}